--- a/style.css
+++ b/style.css
@@ -169,3 +169,9 @@ main {
 .hidden {
   display: none;
 }
+
+@media only screen and (max-width: 790px) {
+  .btn--new {
+    margin-top: 250px;
+  }
+}
