--- a/style.css
+++ b/style.css
@@ -180,12 +180,22 @@ main {
   top: 25px;
   font-size: 2rem;
   text-decoration: none;
-  color: black;
+  color: rgb(97, 97, 97);
   z-index: 1;
 }
 
 .myName a {
-  color: rgb(0, 0, 0);
+  color: rgb(97, 97, 97);
   text-decoration: none;
   font-weight: bolder;
+}
+
+@media screen and (max-width: 820px) {
+  .myName {
+    position: absolute;
+    left: 25px;
+    top: 250px;
+
+    z-index: 1;
+  }
 }
